syntax = "proto3";

package grpc;

service UserService {
 rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
}

message User {
 int64 id = 1;
 int64 name = 2;
}

message GetUsersRequest {
 repeated int64 ids = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}